2004-01-09  Sven Neumann  <sven@gimp.org>
	* configure.in: bumped version number to 1.3.25, interface_age 1,
	binary age 1.

	* Makefile.am
	* gimp-2.0.pc.in
	* gimpthumb-2.0.pc.in
	* gimpui-2.0.pc.in: renamed the pkg-config files.

	* gimptool-2.0.in
	* docs/Makefile.am
	* docs/gimptool-2.0.1.in: renamed gimptool and it's manpage.

	* gimp.spec.in
	* m4macros/gimp-2.0.m4: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11949 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,13 +26,13 @@ SUBDIRS = \
 	$(GIMP_DEVEL_DOCS)	\
 	docs
 
-bin_SCRIPTS = gimptool-$(LT_RELEASE) @GIMPINSTALL@
+bin_SCRIPTS = gimptool-2.0 @GIMPINSTALL@
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = \
-	gimp-$(LT_RELEASE).pc		\
-	gimpthumb-$(LT_RELEASE).pc	\
-	gimpui-$(LT_RELEASE).pc
+	gimp-2.0.pc		\
+	gimpthumb-2.0.pc	\
+	gimpui-2.0.pc
 
 EXTRA_SCRIPTS = gimpinstall-$(LT_RELEASE)
 
@@ -78,7 +78,7 @@ install-exec-hook:
 if DEFAULT_BINARY
 	cd $(DESTDIR)$(bindir) \
 	&& rm -f gimptool \
-	&& $(LN_S) gimptool-$(LT_RELEASE) gimptool
+	&& $(LN_S) gimptool-2.0 gimptool
 endif
 
 uninstall-local:
