--- a/gimpui.pc.in
+++ b/gimpui.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: GIMP UI
 Description: GIMP User Interface Library
 Version: @GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.@GIMP_MICRO_VERSION@
-Requires: gimp-1.3 gtk+-2.0 >= 2.2.0
-Libs: -L${libdir} -lgimpui-1.3 -lgimpwidgets-1.3 
-Cflags: -I${includedir}/gimp-1.3
+Requires: gimp-2.0 gtk+-2.0 >= 2.2.0
+Libs: -L${libdir} -lgimpui-@LT_RELEASE@ -lgimpwidgets-@LT_RELEASE@
+Cflags: -I${includedir}/gimp-@LT_RELEASE@
