2004-01-09  Tor Lillqvist  <tml@iki.fi>
	* plug-ins/winsnap/Makefile.am (winsnap-win32res.o): Don't try to
	use the no longer included build/win32/compile-resource
	script. Instead, run windres directly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11950 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/winsnap/Makefile.am
+++ b/plug-ins/winsnap/Makefile.am
@@ -34,4 +34,4 @@ LDADD = \
 	$(INTLLIBS)
 
 winsnap-win32res.o: winsnap.rc select.cur small.ico winsnap.ico
-	$(top_srcdir)/build/win32/compile-resource winsnap.rc winsnap-win32res.o
+	windres winsnap.rc winsnap-win32res.o
