2004-01-12  Sven Neumann  <sven@gimp.org>
	* gimptool-2.0.in: build the version number from just like it is done
	for the pkg-config files.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11996 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/gimptool-2.0.in
+++ b/gimptool-2.0.in
@@ -143,7 +143,7 @@ while test $# -gt 0; do
 
   case $1 in
     --version)
-      echo @GIMP_VERSION@
+      echo @GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.@GIMP_MICRO_VERSION@
       exit 0
       ;;
     --help)
