--- a/data/misc/gimp.desktop.in.in
+++ b/data/misc/gimp.desktop.in.in
@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=The GIMP (unstable)
 _Comment=Create and edit images or photographs
 TryExec=gimp-1.3
-Exec=gimp-1.3 %U
+Exec=gimp-remote-1.3 --new %U
 Icon=@gimpdatadir@/images/wilber-icon.png
 Terminal=false
 Type=Application
