2004-01-14  Michael Natterer  <mitch@gimp.org>
	* app/Makefile.am: fix typo in the uninstall-local target for
	gimp-console.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12030 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -152,7 +152,7 @@ uninstall-local:
 if DEFAULT_BINARY
 	rm -f $(DESTDIR)$(bindir)/gimp$(EXEEXT)
 if ENABLE_GIMP_CONSOLE
-	rm -f $(DESTDIR)$(bindir)/gimp-console-$(EXEEXT)
+	rm -f $(DESTDIR)$(bindir)/gimp-console$(EXEEXT)
 endif
 endif
 
