2004-01-15  Sven Neumann  <sven@gimp.org>
	* data/misc/Makefile.am: added a "validate" rule that attempts to
	validate the generated gimp.desktop file using desktop-file-validate
	(from desktop-file-utils). Run it on 'make dist'.

	* tips/Makefile.am: for consistency, moved the existing validation
	code to a rule called "validate".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12038 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/data/misc/Makefile.am
+++ b/data/misc/Makefile.am
@@ -60,3 +60,13 @@ if DESKTOP_DATADIR
 		&& rm -f gimp-$(LT_RELEASE).keys \
 	; fi
 endif
+
+validate: gimp.desktop
+	( dfvalidate=`which desktop-file-validate`; \
+	  if test x$$dfvalidate != x && test -x $$dfvalidate; then \
+            $$dfvalidate $< || ( echo "* $< INVALID *"; exit 1 ) \
+	  else \
+	    echo "Can't find desktop-file-validate to validate $<; proceed with fingers crossed..."; \
+          fi )
+
+dist-hook: validate
