2004-01-15  Michael Natterer  <mitch@gimp.org>
	* POTFILES.in: added plug-ins/helpbrowser/domain.c


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12046 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -181,6 +181,7 @@ plug-ins/gimpressionist/repaint.c
 plug-ins/gimpressionist/size.c
 plug-ins/gimpressionist/sizemap.c
 plug-ins/helpbrowser/dialog.c
+plug-ins/helpbrowser/domain.c
 plug-ins/helpbrowser/helpbrowser.c
 plug-ins/ifscompose/ifscompose.c
 plug-ins/imagemap/imap_about.c
