2004-01-20  Sven Neumann  <sven@gimp.org>
	* tools/gimp-remote.c: made --new the default behaviour and allow
	gimp-remote to be called without any image filenames.

	* docs/gimp-remote-1.3.1.in: changed accordingly.

	* data/misc/gimp.applications
	* data/misc/gimp.desktop.in.in: removed --new option from
	gimp-remote calls.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12105 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/data/misc/gimp.applications.in
+++ b/data/misc/gimp.applications.in
@@ -1,5 +1,5 @@
 gimp-1.3
-	command=gimp-remote-1.3 --new
+	command=gimp-remote-1.3
 	name=The GIMP (unstable)
 	can_open_multiple_files=true
 	expects_uris=non-file
