--- a/data/misc/gimp.desktop.in.in
+++ b/data/misc/gimp.desktop.in.in
@@ -2,8 +2,8 @@
 Encoding=UTF-8
 _Name=The GIMP (unstable)
 _Comment=Create and edit images or photographs
+Exec=gimp-remote-1.3 %U
 TryExec=gimp-1.3
-Exec=gimp-remote-1.3 --new %U
 Icon=@gimpdatadir@/images/wilber-icon.png
 Terminal=false
 Type=Application
