2004-01-20 Henrik Brix Andersen <brix@gimp.org>
* POTFILES.in: added missing
plug-ins/script-fu/scripts/select-to-pattern.scm (fixes bug
#132029)


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12113 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/POTFILES.in
+++ b/po-script-fu/POTFILES.in
@@ -78,6 +78,7 @@ plug-ins/script-fu/scripts/ripply-anim.scm
 plug-ins/script-fu/scripts/round-corners.scm
 plug-ins/script-fu/scripts/select-to-brush.scm
 plug-ins/script-fu/scripts/select-to-image.scm
+plug-ins/script-fu/scripts/select-to-pattern.scm
 plug-ins/script-fu/scripts/selection-round.scm
 plug-ins/script-fu/scripts/slide.scm
 plug-ins/script-fu/scripts/sota-chrome-logo.scm
